--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+api.security.token.secret=${JWT_SECRET:my-secret-key}
+
+logging.level.root=info
+logging.file.name=myapplication.log
