--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 api.security.token.secret=${JWT_SECRET:my-secret-key}
+api.security.token.expiration=7200000
 
 logging.level.root=info
 logging.file.name=myapplication.log
