--- a/backend/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/backend/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -8,5 +8,10 @@
     "name": "api.security.token.expiration",
     "type": "java.lang.Long",
     "description": "Expiração do token em milissegundos'"
+  },
+  {
+    "name": "app.initial-load",
+    "type": "java.lang.String",
+    "description": "A description for 'app.initial-load'"
   }
 ]}
