Feat(app): Add mobx package and its helpers to aid in state management

--- a/app/vortasks/pubspec.yaml
+++ b/app/vortasks/pubspec.yaml
@@ -16,12 +16,16 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_native_splash: ^2.4.0
   flutter_launcher_icons: ^0.13.1
+  mobx: ^2.3.3+2
+  flutter_mobx: ^2.2.1+1
+  mobx_codegen: ^2.6.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^3.0.0
+  build_runner: ^2.4.10
 
 flutter:
 
