--- a/app/vortasks/pubspec.yaml
+++ b/app/vortasks/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   mobx: ^2.3.3+2
   flutter_mobx: ^2.2.1+1
   mobx_codegen: ^2.6.1
+  shared_preferences: ^2.2.3
+  get_it: ^7.7.0
 
 dev_dependencies:
   flutter_test:
