--- a/app/vortasks/pubspec.yaml
+++ b/app/vortasks/pubspec.yaml
@@ -19,8 +19,11 @@ dependencies:
   mobx: ^2.3.3+2
   flutter_mobx: ^2.2.1+1
   mobx_codegen: ^2.6.1
+  http: ^1.2.1
   shared_preferences: ^2.2.3
   get_it: ^7.7.0
+  uuid: ^4.4.0
+  flutter_speed_dial: ^7.0.0
 
 dev_dependencies:
   flutter_test:
@@ -28,6 +31,7 @@ dev_dependencies:
 
   flutter_lints: ^3.0.0
   build_runner: ^2.4.10
+  mockito: ^5.4.4
 
 flutter:
 
