--- a/app/vortasks/android/build.gradle
+++ b/app/vortasks/android/build.gradle
@@ -3,7 +3,13 @@ allprojects {
         google()
         mavenCentral()
     }
-}
+
+    configurations.all {
+        resolutionStrategy {
+            force 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.10'
+        }
+    }
+}    
 
 rootProject.buildDir = '../build'
 subprojects {
