--- a/app/vortasks/pubspec.yaml
+++ b/app/vortasks/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   get_it: ^7.7.0
   uuid: ^4.4.0
   flutter_speed_dial: ^7.0.0
+  connectivity_plus: ^6.0.3
+  intl: ^0.19.0
+  workmanager: ^0.5.2
 
 dev_dependencies:
   flutter_test:
